skeplib/tests/fixtures/resolver/valid/folder_recursive/string/case.sk
fn up() -> Int {
  return 1;
}
