skeplib/tests/fixtures/resolver/invalid/ambiguous_file_folder/a.sk
fn file_mod() -> Int {
  return 1;
}
